--- a/result/2022-01-13.md
+++ b/result/2022-01-13.md
@@ -12,10 +12,10 @@
 12. [没有杨幂拆不了的台](https://s.weibo.com//weibo?q=%23%E6%B2%A1%E6%9C%89%E6%9D%A8%E5%B9%82%E6%8B%86%E4%B8%8D%E4%BA%86%E7%9A%84%E5%8F%B0%23&Refer=top) 410294
 13. [任泽平被禁言](https://s.weibo.com//weibo?q=%23%E4%BB%BB%E6%B3%BD%E5%B9%B3%E8%A2%AB%E7%A6%81%E8%A8%80%23&Refer=top) 390195
 14. [78岁拾荒老人捡俩手机徒步5小时交给警察](https://s.weibo.com//weibo?q=%2378%E5%B2%81%E6%8B%BE%E8%8D%92%E8%80%81%E4%BA%BA%E6%8D%A1%E4%BF%A9%E6%89%8B%E6%9C%BA%E5%BE%92%E6%AD%A55%E5%B0%8F%E6%97%B6%E4%BA%A4%E7%BB%99%E8%AD%A6%E5%AF%9F%23&Refer=top) 361062
-15. [婚纱店回应女子怒剪32件婚纱](https://s.weibo.com//weibo?q=%23%E5%A9%9A%E7%BA%B1%E5%BA%97%E5%9B%9E%E5%BA%94%E5%A5%B3%E5%AD%90%E6%80%92%E5%89%AA32%E4%BB%B6%E5%A9%9A%E7%BA%B1%23&Refer=top) 348860
-16. [深圳为什么是奇迹之城](https://s.weibo.com//weibo?q=%23%E6%B7%B1%E5%9C%B3%E4%B8%BA%E4%BB%80%E4%B9%88%E6%98%AF%E5%A5%87%E8%BF%B9%E4%B9%8B%E5%9F%8E%23&Refer=top) 347066
-17. [西安通报3起疫情防控工作中典型问题](https://s.weibo.com//weibo?q=%23%E8%A5%BF%E5%AE%89%E9%80%9A%E6%8A%A53%E8%B5%B7%E7%96%AB%E6%83%85%E9%98%B2%E6%8E%A7%E5%B7%A5%E4%BD%9C%E4%B8%AD%E5%85%B8%E5%9E%8B%E9%97%AE%E9%A2%98%23&Refer=top) 334987
-18. [牛姓男子给二胎取名牛成群](https://s.weibo.com//weibo?q=%23%E7%89%9B%E5%A7%93%E7%94%B7%E5%AD%90%E7%BB%99%E4%BA%8C%E8%83%8E%E5%8F%96%E5%90%8D%E7%89%9B%E6%88%90%E7%BE%A4%23&Refer=top) 331861
+15. [牛姓男子给二胎取名牛成群](https://s.weibo.com//weibo?q=%23%E7%89%9B%E5%A7%93%E7%94%B7%E5%AD%90%E7%BB%99%E4%BA%8C%E8%83%8E%E5%8F%96%E5%90%8D%E7%89%9B%E6%88%90%E7%BE%A4%23&Refer=top) 350799
+16. [婚纱店回应女子怒剪32件婚纱](https://s.weibo.com//weibo?q=%23%E5%A9%9A%E7%BA%B1%E5%BA%97%E5%9B%9E%E5%BA%94%E5%A5%B3%E5%AD%90%E6%80%92%E5%89%AA32%E4%BB%B6%E5%A9%9A%E7%BA%B1%23&Refer=top) 348860
+17. [深圳为什么是奇迹之城](https://s.weibo.com//weibo?q=%23%E6%B7%B1%E5%9C%B3%E4%B8%BA%E4%BB%80%E4%B9%88%E6%98%AF%E5%A5%87%E8%BF%B9%E4%B9%8B%E5%9F%8E%23&Refer=top) 347066
+18. [西安通报3起疫情防控工作中典型问题](https://s.weibo.com//weibo?q=%23%E8%A5%BF%E5%AE%89%E9%80%9A%E6%8A%A53%E8%B5%B7%E7%96%AB%E6%83%85%E9%98%B2%E6%8E%A7%E5%B7%A5%E4%BD%9C%E4%B8%AD%E5%85%B8%E5%9E%8B%E9%97%AE%E9%A2%98%23&Refer=top) 334987
 19. [女孩用课本给自己输液把知识送进脑中](https://s.weibo.com//weibo?q=%23%E5%A5%B3%E5%AD%A9%E7%94%A8%E8%AF%BE%E6%9C%AC%E7%BB%99%E8%87%AA%E5%B7%B1%E8%BE%93%E6%B6%B2%E6%8A%8A%E7%9F%A5%E8%AF%86%E9%80%81%E8%BF%9B%E8%84%91%E4%B8%AD%23&Refer=top) 331174
 20. [小伙在隔离房每天完成万米长跑](https://s.weibo.com//weibo?q=%23%E5%B0%8F%E4%BC%99%E5%9C%A8%E9%9A%94%E7%A6%BB%E6%88%BF%E6%AF%8F%E5%A4%A9%E5%AE%8C%E6%88%90%E4%B8%87%E7%B1%B3%E9%95%BF%E8%B7%91%23&Refer=top) 291678
 21. [恒大汽车恒驰5首车正式下线](https://s.weibo.com//weibo?q=%23%E6%81%92%E5%A4%A7%E6%B1%BD%E8%BD%A6%E6%81%92%E9%A9%B05%E9%A6%96%E8%BD%A6%E6%AD%A3%E5%BC%8F%E4%B8%8B%E7%BA%BF%23&Refer=top) 285457
@@ -28,10 +28,10 @@
 28. [加厚一倍芝士有多快乐](https://s.weibo.com//weibo?q=%E5%8A%A0%E5%8E%9A%E4%B8%80%E5%80%8D%E8%8A%9D%E5%A3%AB%E6%9C%89%E5%A4%9A%E5%BF%AB%E4%B9%90&Refer=top) 215248
 29. [这就是学校小吃的排面吧](https://s.weibo.com//weibo?q=%23%E8%BF%99%E5%B0%B1%E6%98%AF%E5%AD%A6%E6%A0%A1%E5%B0%8F%E5%90%83%E7%9A%84%E6%8E%92%E9%9D%A2%E5%90%A7%23&Refer=top) 182242
 30. [真的不是我泪点低](https://s.weibo.com//weibo?q=%23%E7%9C%9F%E7%9A%84%E4%B8%8D%E6%98%AF%E6%88%91%E6%B3%AA%E7%82%B9%E4%BD%8E%23&Refer=top) 182189
-31. [男生间最完美的打招呼方式](https://s.weibo.com//weibo?q=%23%E7%94%B7%E7%94%9F%E9%97%B4%E6%9C%80%E5%AE%8C%E7%BE%8E%E7%9A%84%E6%89%93%E6%8B%9B%E5%91%BC%E6%96%B9%E5%BC%8F%23&Refer=top) 179907
-32. [陕西一大学包高铁送学生回家](https://s.weibo.com//weibo?q=%23%E9%99%95%E8%A5%BF%E4%B8%80%E5%A4%A7%E5%AD%A6%E5%8C%85%E9%AB%98%E9%93%81%E9%80%81%E5%AD%A6%E7%94%9F%E5%9B%9E%E5%AE%B6%23&Refer=top) 176849
-33. [假如广东衣服会说话](https://s.weibo.com//weibo?q=%E5%81%87%E5%A6%82%E5%B9%BF%E4%B8%9C%E8%A1%A3%E6%9C%8D%E4%BC%9A%E8%AF%B4%E8%AF%9D&Refer=top) 171465
-34. [刻进DNA里的中国菜](https://s.weibo.com//weibo?q=%23%E5%88%BB%E8%BF%9BDNA%E9%87%8C%E7%9A%84%E4%B8%AD%E5%9B%BD%E8%8F%9C%23&Refer=top) 165958
+31. [刻进DNA里的中国菜](https://s.weibo.com//weibo?q=%23%E5%88%BB%E8%BF%9BDNA%E9%87%8C%E7%9A%84%E4%B8%AD%E5%9B%BD%E8%8F%9C%23&Refer=top) 180196
+32. [男生间最完美的打招呼方式](https://s.weibo.com//weibo?q=%23%E7%94%B7%E7%94%9F%E9%97%B4%E6%9C%80%E5%AE%8C%E7%BE%8E%E7%9A%84%E6%89%93%E6%8B%9B%E5%91%BC%E6%96%B9%E5%BC%8F%23&Refer=top) 179907
+33. [陕西一大学包高铁送学生回家](https://s.weibo.com//weibo?q=%23%E9%99%95%E8%A5%BF%E4%B8%80%E5%A4%A7%E5%AD%A6%E5%8C%85%E9%AB%98%E9%93%81%E9%80%81%E5%AD%A6%E7%94%9F%E5%9B%9E%E5%AE%B6%23&Refer=top) 176849
+34. [假如广东衣服会说话](https://s.weibo.com//weibo?q=%E5%81%87%E5%A6%82%E5%B9%BF%E4%B8%9C%E8%A1%A3%E6%9C%8D%E4%BC%9A%E8%AF%B4%E8%AF%9D&Refer=top) 171465
 35. [Cat解说](https://s.weibo.com//weibo?q=%23Cat%E8%A7%A3%E8%AF%B4%23&Refer=top) 153184
 36. [自带苦瓜脸的猫咪有多可爱](https://s.weibo.com//weibo?q=%23%E8%87%AA%E5%B8%A6%E8%8B%A6%E7%93%9C%E8%84%B8%E7%9A%84%E7%8C%AB%E5%92%AA%E6%9C%89%E5%A4%9A%E5%8F%AF%E7%88%B1%23&Refer=top) 149612
 37. [怎么会有小羊叫的那么难听](https://s.weibo.com//weibo?q=%23%E6%80%8E%E4%B9%88%E4%BC%9A%E6%9C%89%E5%B0%8F%E7%BE%8A%E5%8F%AB%E7%9A%84%E9%82%A3%E4%B9%88%E9%9A%BE%E5%90%AC%23&Refer=top) 148384
@@ -39,4 +39,5 @@
 39. [假如美羊羊是韩国羊](https://s.weibo.com//weibo?q=%23%E5%81%87%E5%A6%82%E7%BE%8E%E7%BE%8A%E7%BE%8A%E6%98%AF%E9%9F%A9%E5%9B%BD%E7%BE%8A%23&Refer=top) 133343
 40. [年会C位氛围感妆](https://s.weibo.com//weibo?q=%23%E5%B9%B4%E4%BC%9AC%E4%BD%8D%E6%B0%9B%E5%9B%B4%E6%84%9F%E5%A6%86%23&Refer=top) 104150
 41. [当香菜走进配菜届](https://s.weibo.com//weibo?q=%23%E5%BD%93%E9%A6%99%E8%8F%9C%E8%B5%B0%E8%BF%9B%E9%85%8D%E8%8F%9C%E5%B1%8A%23&Refer=top) 102552
-42. [张文宏辟谣被居家隔离](https://s.weibo.com//weibo?q=%23%E5%BC%A0%E6%96%87%E5%AE%8F%E8%BE%9F%E8%B0%A3%E8%A2%AB%E5%B1%85%E5%AE%B6%E9%9A%94%E7%A6%BB%23&Refer=top) 91256
+42. [双胞胎为完成作业轮流录给妈妈洗脚视频](https://s.weibo.com//weibo?q=%23%E5%8F%8C%E8%83%9E%E8%83%8E%E4%B8%BA%E5%AE%8C%E6%88%90%E4%BD%9C%E4%B8%9A%E8%BD%AE%E6%B5%81%E5%BD%95%E7%BB%99%E5%A6%88%E5%A6%88%E6%B4%97%E8%84%9A%E8%A7%86%E9%A2%91%23&Refer=top) 99180
+43. [张文宏辟谣被居家隔离](https://s.weibo.com//weibo?q=%23%E5%BC%A0%E6%96%87%E5%AE%8F%E8%BE%9F%E8%B0%A3%E8%A2%AB%E5%B1%85%E5%AE%B6%E9%9A%94%E7%A6%BB%23&Refer=top) 92561
