--- a/result/2022-01-13.md
+++ b/result/2022-01-13.md
@@ -26,9 +26,9 @@
 26. [罗翔百大UP主获奖感言](https://s.weibo.com//weibo?q=%23%E7%BD%97%E7%BF%94%E7%99%BE%E5%A4%A7UP%E4%B8%BB%E8%8E%B7%E5%A5%96%E6%84%9F%E8%A8%80%23&Refer=top) 236753
 27. [毕业即月入过万的本科生不到一成](https://s.weibo.com//weibo?q=%23%E6%AF%95%E4%B8%9A%E5%8D%B3%E6%9C%88%E5%85%A5%E8%BF%87%E4%B8%87%E7%9A%84%E6%9C%AC%E7%A7%91%E7%94%9F%E4%B8%8D%E5%88%B0%E4%B8%80%E6%88%90%23&Refer=top) 219948
 28. [加厚一倍芝士有多快乐](https://s.weibo.com//weibo?q=%E5%8A%A0%E5%8E%9A%E4%B8%80%E5%80%8D%E8%8A%9D%E5%A3%AB%E6%9C%89%E5%A4%9A%E5%BF%AB%E4%B9%90&Refer=top) 215248
-29. [这就是学校小吃的排面吧](https://s.weibo.com//weibo?q=%23%E8%BF%99%E5%B0%B1%E6%98%AF%E5%AD%A6%E6%A0%A1%E5%B0%8F%E5%90%83%E7%9A%84%E6%8E%92%E9%9D%A2%E5%90%A7%23&Refer=top) 182242
-30. [真的不是我泪点低](https://s.weibo.com//weibo?q=%23%E7%9C%9F%E7%9A%84%E4%B8%8D%E6%98%AF%E6%88%91%E6%B3%AA%E7%82%B9%E4%BD%8E%23&Refer=top) 182189
-31. [刻进DNA里的中国菜](https://s.weibo.com//weibo?q=%23%E5%88%BB%E8%BF%9BDNA%E9%87%8C%E7%9A%84%E4%B8%AD%E5%9B%BD%E8%8F%9C%23&Refer=top) 180196
+29. [刻进DNA里的中国菜](https://s.weibo.com//weibo?q=%23%E5%88%BB%E8%BF%9BDNA%E9%87%8C%E7%9A%84%E4%B8%AD%E5%9B%BD%E8%8F%9C%23&Refer=top) 183162
+30. [这就是学校小吃的排面吧](https://s.weibo.com//weibo?q=%23%E8%BF%99%E5%B0%B1%E6%98%AF%E5%AD%A6%E6%A0%A1%E5%B0%8F%E5%90%83%E7%9A%84%E6%8E%92%E9%9D%A2%E5%90%A7%23&Refer=top) 182242
+31. [真的不是我泪点低](https://s.weibo.com//weibo?q=%23%E7%9C%9F%E7%9A%84%E4%B8%8D%E6%98%AF%E6%88%91%E6%B3%AA%E7%82%B9%E4%BD%8E%23&Refer=top) 182189
 32. [男生间最完美的打招呼方式](https://s.weibo.com//weibo?q=%23%E7%94%B7%E7%94%9F%E9%97%B4%E6%9C%80%E5%AE%8C%E7%BE%8E%E7%9A%84%E6%89%93%E6%8B%9B%E5%91%BC%E6%96%B9%E5%BC%8F%23&Refer=top) 179907
 33. [陕西一大学包高铁送学生回家](https://s.weibo.com//weibo?q=%23%E9%99%95%E8%A5%BF%E4%B8%80%E5%A4%A7%E5%AD%A6%E5%8C%85%E9%AB%98%E9%93%81%E9%80%81%E5%AD%A6%E7%94%9F%E5%9B%9E%E5%AE%B6%23&Refer=top) 176849
 34. [假如广东衣服会说话](https://s.weibo.com//weibo?q=%E5%81%87%E5%A6%82%E5%B9%BF%E4%B8%9C%E8%A1%A3%E6%9C%8D%E4%BC%9A%E8%AF%B4%E8%AF%9D&Refer=top) 171465
@@ -36,8 +36,9 @@
 36. [自带苦瓜脸的猫咪有多可爱](https://s.weibo.com//weibo?q=%23%E8%87%AA%E5%B8%A6%E8%8B%A6%E7%93%9C%E8%84%B8%E7%9A%84%E7%8C%AB%E5%92%AA%E6%9C%89%E5%A4%9A%E5%8F%AF%E7%88%B1%23&Refer=top) 149612
 37. [怎么会有小羊叫的那么难听](https://s.weibo.com//weibo?q=%23%E6%80%8E%E4%B9%88%E4%BC%9A%E6%9C%89%E5%B0%8F%E7%BE%8A%E5%8F%AB%E7%9A%84%E9%82%A3%E4%B9%88%E9%9A%BE%E5%90%AC%23&Refer=top) 148384
 38. [排骨界天花板](https://s.weibo.com//weibo?q=%23%E6%8E%92%E9%AA%A8%E7%95%8C%E5%A4%A9%E8%8A%B1%E6%9D%BF%23&Refer=top) 142774
-39. [假如美羊羊是韩国羊](https://s.weibo.com//weibo?q=%23%E5%81%87%E5%A6%82%E7%BE%8E%E7%BE%8A%E7%BE%8A%E6%98%AF%E9%9F%A9%E5%9B%BD%E7%BE%8A%23&Refer=top) 133343
-40. [年会C位氛围感妆](https://s.weibo.com//weibo?q=%23%E5%B9%B4%E4%BC%9AC%E4%BD%8D%E6%B0%9B%E5%9B%B4%E6%84%9F%E5%A6%86%23&Refer=top) 104150
-41. [当香菜走进配菜届](https://s.weibo.com//weibo?q=%23%E5%BD%93%E9%A6%99%E8%8F%9C%E8%B5%B0%E8%BF%9B%E9%85%8D%E8%8F%9C%E5%B1%8A%23&Refer=top) 102552
-42. [双胞胎为完成作业轮流录给妈妈洗脚视频](https://s.weibo.com//weibo?q=%23%E5%8F%8C%E8%83%9E%E8%83%8E%E4%B8%BA%E5%AE%8C%E6%88%90%E4%BD%9C%E4%B8%9A%E8%BD%AE%E6%B5%81%E5%BD%95%E7%BB%99%E5%A6%88%E5%A6%88%E6%B4%97%E8%84%9A%E8%A7%86%E9%A2%91%23&Refer=top) 99180
+39. [双胞胎为完成作业轮流录给妈妈洗脚视频](https://s.weibo.com//weibo?q=%23%E5%8F%8C%E8%83%9E%E8%83%8E%E4%B8%BA%E5%AE%8C%E6%88%90%E4%BD%9C%E4%B8%9A%E8%BD%AE%E6%B5%81%E5%BD%95%E7%BB%99%E5%A6%88%E5%A6%88%E6%B4%97%E8%84%9A%E8%A7%86%E9%A2%91%23&Refer=top) 135717
+40. [假如美羊羊是韩国羊](https://s.weibo.com//weibo?q=%23%E5%81%87%E5%A6%82%E7%BE%8E%E7%BE%8A%E7%BE%8A%E6%98%AF%E9%9F%A9%E5%9B%BD%E7%BE%8A%23&Refer=top) 133343
+41. [年会C位氛围感妆](https://s.weibo.com//weibo?q=%23%E5%B9%B4%E4%BC%9AC%E4%BD%8D%E6%B0%9B%E5%9B%B4%E6%84%9F%E5%A6%86%23&Refer=top) 104150
+42. [当香菜走进配菜届](https://s.weibo.com//weibo?q=%23%E5%BD%93%E9%A6%99%E8%8F%9C%E8%B5%B0%E8%BF%9B%E9%85%8D%E8%8F%9C%E5%B1%8A%23&Refer=top) 102552
 43. [张文宏辟谣被居家隔离](https://s.weibo.com//weibo?q=%23%E5%BC%A0%E6%96%87%E5%AE%8F%E8%BE%9F%E8%B0%A3%E8%A2%AB%E5%B1%85%E5%AE%B6%E9%9A%94%E7%A6%BB%23&Refer=top) 92561
+44. [官方通报衡水一教师体罚学生](https://s.weibo.com//weibo?q=%23%E5%AE%98%E6%96%B9%E9%80%9A%E6%8A%A5%E8%A1%A1%E6%B0%B4%E4%B8%80%E6%95%99%E5%B8%88%E4%BD%93%E7%BD%9A%E5%AD%A6%E7%94%9F%23&Refer=top) 53275
